tests/profile/error/camera/gotogeo_wrongtype_anchor.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "goToGeo",
    "anchor": 1.0,
    "latitude": 1.0,
    "longitude": 2.0,
    "altitude": 4.0
  }
}
